--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,36 @@
             <button class="bg-[#12100C] text-white px-6 py-2 rounded-xl">Login</button>
         </div>
     </div>
-    
+    <div class="flex justify-between items-center p-6 xl:hidden">
+        <div>
+            <img src="/Frame (4).png" alt="">
+        </div>
+        <div>
+            <button class="bg-[#12100C] px-2 py-2">
+                <img src="/icn login .icn-xs.png" alt="">
+            <img src="/icn menu .icn-xs.png" alt="">
+            </button>
+        </div>
+    </div>
+    <div class="xl:flex hidden justify-center items-center gap-60 p-10">
+        <div>
+            <h1 class="text-[80px] font-bold">Always Ready to Code.</h1><br>
+            <p class="text-[23px] text-[gray]">Spin up fresh, automated dev environments<br>
+for each task, in the cloud, in seconds.</p><br>
+<div class="flex gap-6">
+            <button class="bg-[#FFAE33] text-black px-6 py-2 rounded-xl">Try Now</button>
+            <p class="text-[gray]">Open a workspace.<br>
+Start from any Git context.</p>
+        </div>
+        <div class="flex gap-6 mt-10">
+            <img src="/Frame (5).png" alt="">
+            <img src="/Frame (6).png" alt="">
+            <img src="/Frame (7).png" alt="">
+        </div>
+        </div>
+        <div>
+            <img src="/Frame (8).png" alt="">
+        </div>
+    </div><br>
 </body>
 </html>
