--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,30 @@ Start from any Git context.</p>
             <img src="/Frame (8).png" alt="">
         </div>
     </div><br>
+     <div class="xl:hidden flex justify-center items-center gap-10 p-10">
+        <div>
+<h1 class="text-[40px] font-bold">Always<br>
+Ready to Code.</h1>
+<p>Spin up fresh, automated dev environments<br>
+for each task, in the cloud, in seconds.</p><br>
+<div class="flex gap-6 items-center">
+ <button class="bg-[#FFAE33] text-black px-10 py-2 rounded-xl">Try Now</button>
+ <p>Open a workspace.<br>
+Start from any Git<br> context.</p>
+ </div>
+ <img class="ml-[-15px]" src="/Frame (8).png" alt="">
+        </div>
+    </div>
+      <div class="hidden xl:block">
+   <h1 class="text-[54px] font-bold text-center">Select project,</h1>
+    <h1 class="text-[54px] font-semibold text-center text-[gray] line-through">check dependencies, checkout branch, view<br>
+readme.txt, install tools, run build, run test,</h1>
+   <h1 class="text-[54px] font-bold text-center">start coding.</h1>
+    </div>
+  <div class="xl:hidden block">
+   <h1 class="text-[34px] font-bold text-center">Select project,</h1>
+    <h1 class="text-[34px] font-semibold text-center text-[gray] line-through">check dependencies, checkout branch, view</h1>
+   <h1 class="text-[34px] font-bold text-center">start coding.</h1>
+    </div><br><br><br>
 </body>
 </html>
