--- a/src/index.html
+++ b/src/index.html
@@ -79,5 +79,25 @@ readme.txt, install tools, run build, run test,</h1>
     <h1 class="text-[34px] font-semibold text-center text-[gray] line-through">check dependencies, checkout branch, view</h1>
    <h1 class="text-[34px] font-bold text-center">start coding.</h1>
     </div><br><br><br>
+      <div class="xl:flex hidden items-center justify-center gap-[250px] mt-[100px]">
+  <div>
+    <h1 class="text-[32px] font-semibold">Think CI/CD for dev environments</h1>
+    <p class="text-[gray]">We invented prebuilds so application code, configuration and<br> infrastructure can all be stored as machine-executable code<br> in your git repositories and applied to dev environments<br> automatically and continuously.</p><br><br><br><br>
+     <button class="bg-[#FFAE33] text-black px-10 py-1 rounded-xl font-semibold">More on prebuilds</button>
+      <button class="bg-[#FFB0AE] text-black px-10 py-1 rounded-xl font-semibold">Documentation</button>
+  </div>
+  <div>
+    <img src="/Frame (9).png" alt="">
+  </div>
+    </div>
+    <div class="xl:hidden block justify-center text-center items-center">
+        <div>
+    <h1 class="text-[32px] font-semibold">Think CI/CD for dev environments</h1>
+    <p class="text-[gray]">We invented prebuilds so application code, configuration and<br> infrastructure can all be stored as machine-executable code<br> in your git repositories and applied to dev environments<br> automatically and continuously.</p><br><br>
+  </div>
+  <div>
+        <img src="/Frame (9).png" alt="">
+        </div>
+    </div>
 </body>
 </html>
