--- a/src/index.html
+++ b/src/index.html
@@ -99,5 +99,22 @@ readme.txt, install tools, run build, run test,</h1>
         <img src="/Frame (9).png" alt="">
         </div>
     </div>
+    <div class="xl:flex flex-col hidden justify-center items-center mt-10">
+    <h1 class="text-[54px] font-bold ">Remote-first. Secure by design.</h1><br>
+    <img src="/Rectangle.png" alt="">
+    <p class="text-center">You no longer need an over-powered laptop to code, Gitpod works just as<br> smoothly on a Chromebook or iPad. All you need is a browser. Gitpod centralizes<br> all source code and never stores it on insecure machines and networks.</p><br>
+    <div class="flex gap-6">
+        <img src="/Frame (10).png" alt="">
+        <img src="/Frame (11).png" alt="">
+    </div>
+    </div><br><br>
+    <div class="xl:hidden block justify-center items-center text-center mt-10">
+<h1 class="text-[34px] font-bold ">Remote-first. Secure by design.</h1><br>
+    <img src="/Rectangle.png" alt=""><br>
+    <div class="flex gap-6 w-[150px] justify-center ml-[120px]">
+        <img src="/Frame (10).png" alt="">
+        <img src="/Frame (11).png" alt="">
+    </div>
+    </div>
 </body>
 </html>
