--- a/src/index.html
+++ b/src/index.html
@@ -116,5 +116,89 @@ readme.txt, install tools, run build, run test,</h1>
         <img src="/Frame (11).png" alt="">
     </div>
     </div>
+     <div class="xl:block hidden">
+        <h1 class="text-[54px] font-bold text-center">Used by 400,000+ developers.</h1>
+    </div>
+    <div class="xl:flex hidden mt-10 gap-20 justify-center">
+        <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (1).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+         <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (2).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+         <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (3).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+    </div>
+    <div class="xl:hidden block">
+<div class="">
+        <h1 class="text-[34px] font-bold text-center">Used by 400,000+ developers.</h1>
+    </div>
+    <div class="Xl:hidden flex flex-col mt-10 gap-20 justify-center">
+        <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (1).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+         <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (2).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+        <button class="text-start border-2 border-[gray] px-3 py-3 rounded-xl">
+<p>GitPod is incredibly cool.<br><br>
+In my opinion, this is a big step in open source<br> software contribution. I'm excited to see<br> where we go from here.</p><br>
+<div class="flex gap-6 items-center">
+    <img src="/Rectangle (3).png" alt="">
+    <div>
+        <h1 class="font-bold text-[16px]">Ben Halpern</h1>
+        <p>Creator and Co-founder @forem and<br>
+@ThePracticalDev</p>
+</div>
+</div>
+        </button>
+    </div>
+    </div>
 </body>
 </html>
