--- a/src/index.html
+++ b/src/index.html
@@ -200,5 +200,35 @@ In my opinion, this is a big step in open source<br> software contribution. I'm 
         </button>
     </div>
     </div>
+     <div class="hidden xl:block">
+<div class="flex justify-center items-center gap-10 mt-10">
+    <img src="/Frame (13).png" alt="">
+    <img src="/Frame (14).png" alt="">
+    <img src="/Frame (15).png" alt="">
+    <img src="/Frame (16).png" alt="">
+    <img src="/Frame (17).png" alt="">
+    <img src="/Frame (18).png" alt="">
+    <img src="/Frame (19).png" alt="">
+</div><br>
+<div class="flex gap-6 items-center justify-center">
+    <img src="/Frame (21).png" alt="">
+    <img src="/Frame (22).png" alt="">
+    <img src="/Frame (23).png" alt="">
+    <img src="/Frame (24).png" alt="">
+    <img src="/Frame (25).png" alt="">
+</div>
+    </div>
+    <div class="xl:hidden block">
+        <div class="flex flex-col items-center">
+    <img src="/Frame (13).png" alt=""><br>
+    <img src="/Frame (14).png" alt=""><br>
+    <img src="/Frame (15).png" alt=""><br>
+    <img src="/Frame (16).png" alt=""><br>
+    <img src="/Frame (17).png" alt=""><br>
+    <img src="/Frame (18).png" alt=""><br>
+    <img src="/Frame (19).png" alt=""><br>
+    <img src="/Frame (21).png" alt=""><br>
+</div>
+</div>
 </body>
 </html>
