--- a/src/index.html
+++ b/src/index.html
@@ -230,5 +230,41 @@ In my opinion, this is a big step in open source<br> software contribution. I'm 
     <img src="/Frame (21).png" alt=""><br>
 </div>
 </div>
+<div class="xl:flex hidden text-[13px] gap-[250px] justify-center mt-[200px]">
+<div class="">
+    <h1 class="font-semibold">Gitpod</h1><br>
+    <p>Home</p><br>
+    <p>Features</p><br>
+    <p>Pricing</p><br>
+    <p>Changelog</p><br>
+    <p>Self-Hosted</p><br>
+    <p>Gitpod vs GitHub<br>
+Codespaces</p><br>
+    <p>Status</p><br>
+</div>
+<div class="">
+    <h1 class="font-semibold">Developer</h1><br>
+    <p>Getting started</p><br>
+    <p>Screencasts</p><br>
+    <p>Blog</p><br>
+    <p>Documentation</p><br>
+    <p>Report a bug</p><br>
+    <p>Community</p><br>
+</div>
+<div class="">
+    <h1 class="font-semibold">Company</h1><br>
+    <p>About</p><br>
+    <p>Careers</p><br>
+    <p>Contact</p><br>
+    <p>Changelog</p><br>
+</div>
+<div class="">
+    <h1 class="font-semibold">Legal</h1><br>
+    <p>Imprint</p><br>
+    <p>Careers</p><br>
+    <p>Contact</p><br>
+    <p>Changelog</p><br>
+</div>
+</div>
 </body>
 </html>
