--- a/src/index.html
+++ b/src/index.html
@@ -266,5 +266,18 @@ Codespaces</p><br>
     <p>Changelog</p><br>
 </div>
 </div>
+<div class="xl:hidden flex flex-col ml-[170px] mt-[100px]">
+<div class="">
+    <h1 class="font-semibold">Gitpod</h1><br>
+    <p>Home</p><br>
+    <p>Features</p><br>
+    <p>Pricing</p><br>
+    <p>Changelog</p><br>
+    <p>Self-Hosted</p><br>
+    <p>Gitpod vs GitHub<br>
+Codespaces</p><br>
+    <p>Status</p><br>
+</div>
+</div>
 </body>
 </html>
